--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=ProductService
+
+
+#spring.datasource.url=jdbc:postgresql://pg:5432/studs
+#spring.datasource.username=s333165
+#spring.datasource.password=dLziJ58Ftye39PkH
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username=postgres
+spring.datasource.password=11gramgim
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
