Basic operations with collection

--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.datasource.password=11gramgim
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+#server.ssl.enabled=true
+#server.ssl.key-store-type=JKS
+#server.ssl.key-store=./jetty.keystore
+#server.ssl.key-store-password=secret
+#server.ssl.trust-store-type=JKS
+#server.ssl.trust-store=./jetty.truststore
+#server.ssl.trust-store-password=secret
