--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -1,24 +1,20 @@
 spring.application.name=ProductService
 
 
-#spring.datasource.url=jdbc:postgresql://pg:5432/studs
-#spring.datasource.username=s333165
-#spring.datasource.password=dLziJ58Ftye39PkH
+spring.datasource.url=jdbc:postgresql://pg:5432/studs
+spring.datasource.username=s333165
+spring.datasource.password=
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
-spring.datasource.username=postgres
-spring.datasource.password=11gramgim
+#spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=11gramgim
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8177
-
-#server.ssl.enabled=true
-#server.ssl.key-store-type=JKS
-#server.ssl.key-store=./jetty.keystore
-#server.ssl.key-store-password=secret
-#server.ssl.trust-store-type=JKS
-#server.ssl.trust-store=./jetty.truststore
-#server.ssl.trust-store-password=secret
+server.ssl.key-store=/home/studs/s333165/ProductService/keystore.jks
+server.ssl.key-store-password=s333165
+server.ssl.keyStoreType=JKS
+server.ssl.keyAlias=productservice
