Lab4 configuration pt.1

--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=ProductService
 
 
-spring.datasource.url=jdbc:postgresql://85.193.85.116:5432/soa3_ars
-spring.datasource.username=todelete
-spring.datasource.password=oeRTdgj2JDR
+#spring.datasource.url=jdbc:postgresql://85.193.85.116:5432/soa3_ars
+#spring.datasource.username=todelete
+#spring.datasource.password=oeRTdgj2JDR
 
-#spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=11gramgim
+spring.datasource.url=jdbc:postgresql://postgres:5432/db1
+spring.datasource.username=postgres
+spring.datasource.password=11gramgim
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
@@ -15,14 +15,19 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8177
 
+server.ssl.key-store=/app/ssl/keystore.jks
+server.ssl.key-store-password=s333165
+server.ssl.keyStoreType=JKS
+server.ssl.keyAlias=productservice
 
+# For lab3
 
-spring.cloud.consul.discovery.health-check-path=/v1/ping
-spring.cloud.consul.discovery.health-check-interval=10s
-spring.cloud.consul.discovery.prefer-ip-address=true
-
-spring.cloud.consul.discovery.enabled=true
-spring.cloud.consul.discovery.register=true
-spring.cloud.consul.discovery.instance-id=${spring.application.name}-${server.port}
-
-spring.cloud.consul.discovery.service-name=${spring.application.name}
+#spring.cloud.consul.discovery.health-check-path=/v1/ping
+#spring.cloud.consul.discovery.health-check-interval=10s
+#spring.cloud.consul.discovery.prefer-ip-address=true
+#
+#spring.cloud.consul.discovery.enabled=true
+#spring.cloud.consul.discovery.register=true
+#spring.cloud.consul.discovery.instance-id=${spring.application.name}-${server.port}
+#
+#spring.cloud.consul.discovery.service-name=${spring.application.name}
