--- a/ManagementService/ejbModule/pom.xml
+++ b/ManagementService/ejbModule/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>ejbModule</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>ejb</name>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
