--- a/ManagementService/webModule/pom.xml
+++ b/ManagementService/webModule/pom.xml
@@ -31,6 +31,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>2.18.2</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
