--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,10 @@
 services:
-  management:
-    image: 'jboss/wildfly'
+  mule:
+    image: 'wslph/mule:3.9.0-ee'
+    ports:
+      - "8081:8081"
+  jboss:
+    image: 'quay.io/wildfly/wildfly:28.0.0.Final-jdk20'
     restart: always
     ports:
       - "9990:9990"
