--- a/ManagementService/ejbModule/pom.xml
+++ b/ManagementService/ejbModule/pom.xml
@@ -64,7 +64,8 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.13.0</version>
-        </dependency></dependencies>
+        </dependency>
+  </dependencies>
 
   <build>
     <plugins>
