--- a/ManagementService/webModule/pom.xml
+++ b/ManagementService/webModule/pom.xml
@@ -37,6 +37,11 @@
           <version>2.18.2</version>
           <scope>compile</scope>
       </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.datatype</groupId>
+          <artifactId>jackson-datatype-jsr310</artifactId>
+          <version>2.13.0</version>
+      </dependency>
   </dependencies>
 
   <build>
