--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -15,10 +15,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8177
 
-server.ssl.key-store=/app/ssl/keystore.jks
-server.ssl.key-store-password=s333165
-server.ssl.keyStoreType=JKS
-server.ssl.keyAlias=productservice
+#server.ssl.key-store=/app/ssl/keystore.jks
+#server.ssl.key-store-password=s333165
+#server.ssl.keyStoreType=JKS
+#server.ssl.keyAlias=productservice
 
 # For lab3
 
